# focusplay

./: Cargo.toml  README.md  SPEC.md
extension/: background.js  com.focusplay.host.json  manifest.json  register_host.bat
src/: autostart.rs  config.rs  keyboard.rs  main.rs  native_host.rs  pipe_server.rs  protocol.rs  session.rs  tray.rs
