[package]
name = "focusplay"
version = "0.1.0"
edition = "2021"
description = "Control which media session receives your media keys"
license = "MIT"

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    # Media control
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    # Tray icon and menus
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    # Keyboard hook
    "Win32_UI_Input_KeyboardAndMouse",
    # Registry for autostart
    "Win32_System_Registry",
    # Threading and messages
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    # Named pipes and file I/O
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    # Notifications
    "UI_Notifications",
]}

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Paths
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Sync primitives
parking_lot = "0.12"
once_cell = "1"
serde_json = "1.0.149"

[build-dependencies]
embed-resource = "2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols

[dev-dependencies]
tempfile = "3.26.0"
